Fixed siez and alignment of cart items

--- a/src/app/main_style.css
+++ b/src/app/main_style.css
@@ -2,6 +2,10 @@
     -fx-border-radius: 10px;
 }
 .border {
-    -fx-border-width:0.5px;
+    -fx-border-width:0.3px;
     -fx-border-style:solid;
+}
+.borderBottom{
+    -fx-border-style:none none solid none;
+    -fx-border-width:0 0 0.3px 0;
 }
